# demo

./: .gitignore  pyproject.toml
learning-note/: ai-conception.md
learning-note/01-foundations/01-cs-math-basic/computer-science/: computer-network.md
learning-note/01-foundations/01-cs-math-basic/math/: higher-mathematics.md  linear-algebra.md  probability-theory.md
learning-note/01-foundations/02-programming-data-tools/: data-analysis.md  regular-expression.md
learning-note/01-foundations/03-system-development-tools/: development.md  git.md  hydra.md  linux.md  markdown.md  mysql.md
learning-note/02-machine-learning/: deep-learning.md  machine-learning.md  math-basic.md  natural-language-processing.md  test.ipynb
learning-note/02-machine-learning/common/: functions.py  gradient.py  layers.py  optimizer.py
learning-note/03-applications-practice/01-llm-development/: prompt-engineering.md
learning-note/03-applications-practice/02-ai-application-domains/01-NLP/: Vectorization.md  natural-language-processing.md
learning-note/03-applications-practice/03-engineering-practice/: 项目框架.txt
outputs/2026-06-26/21-36-14/.hydra/: config.yaml  hydra.yaml
