[project]
name = "demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gensim>=4.4.0",
    "hydra-core>=1.3.3",
    "ipykernel>=7.3.0",
    "jieba>=0.42.1",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "openai>=2.44.0",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "torchinfo>=1.8.0",
    "tqdm>=4.68.3",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
